# craole-cc

./: .env.example  .envrc  .gitignore  .rust-analyzer.toml  .rustfmt.toml  .scruff  .treefmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  default.nix  flake.nix  leptosfmt.toml  mise.toml  package.json  rust-toolchain.toml  tailwind.config.js  test  test.yaml  testing  trunk.toml
.sqlx/: query-06831499c23f64342c9c37b923014d7a3267d8285fcd2c411c8b6217f43d7c13.json  query-17d2970cf492563bb14e81e257802e6b40ab191728b182e99c5e6705b54eea7c.json  query-1fec39f4b80134bfd77e6e14a9b35366be8674c1ca5912dcbfc6cb318223be17.json  query-263465a90311c3c514924ea51400fc00a2c3805829847fdc39c68c192043c705.json  query-27f81047ee64e27712eb07fb26e35cf0c3279fa0c641d9768089279cf0bc92b3.json  query-296cd12d7832ec43cd22400afe8b76568d1e84b0995da3defe5215e506ef96e9.json  query-2f67fd83c89ba0d5f99bb343b5df4114b405a3af9237e6f8e60f18ecb0defc07.json  query-34fdbc0ea327c0d296d968e8abdae9e55a63ffba8a03d5649d48dca559fdb682.json  query-358e4dac02080793bec629cd0755badc2a2ba9f94b7665ed940f4d5ef979dd21.json  query-484af242030a44a0e485d890220c950411a2b31c30e7be71d64cee292540b9b6.json  query-49ba0a510c74b75a2f274caa587767a823f2d4ffd1d7f7b4f4a1e0655812b0f2.json  query-4beb2eecaf84f6dc5af870f230798d55cfd7067bf113b78943b77f422a6aaad2.json  query-53aa9d13e9f8b1fa149847b553bc8d9338e539c59d059a5c7f2ea047282964d2.json  query-57bb2db0fdd4eba5b561fbcc87dbade34bbfa30695d604859d8cd7175862dced.json  query-58690c900e9d3233b7b97261022f69a7b434ed3d2f8e4aeccc2e36caf335977b.json  query-61d3416b79724c7adbb1c10e6a7499db9ebf152b85e533dc9ad8aa676bdbe8bf.json  query-6ad3a1fff862a32c020d70316cd503a991fa3ad234b28beaebf598ea89d102bf.json  query-6caa9a1625567871da508f9cb2fab5f2b9f7fcc0f5844c920c7f892c0797b111.json  (+23 more)
app/: Cargo.toml
app/sql/media/: get_by_id.sql  list.sql  list_by_tag.sql  list_by_tags.sql  list_related.sql  list_tags.sql  search.sql
app/sql/posts/: get_by_slug.sql  list.sql  list_by_kind.sql  list_kinds.sql  search.sql
app/sql/projects/: get_by_id.sql  get_by_slug.sql  get_featured.sql  get_tags.sql  list.sql  list_by_status.sql  list_by_tag.sql  list_tags.sql  search.sql  update_readme.sql
app/src/: lib.rs  prelude.rs
app/src/base/: constants.rs  footer copy.rs  footer.rs  header.rs  html.rs  index.rs  layout.rs  mod.rs  navigation.rs  router.rs  routes.rs  theme.rs
app/src/components/: dividers.rs  header.rs  icon.rs  icons.rs  mod.rs  socials.rs  theme.rs
app/src/components/buttons/: back_to_top.rs  mod.rs
app/src/components/dividers/: config.rs  mod.rs  view.rs
app/src/components/footer/: footer.rs  info.rs  mod.rs  nav.rs  socials.rs  view.rs
app/src/components/header/: controls.rs  logo.rs  mod.rs  nav.rs  view.rs
app/src/components/search/: field.rs  hooks.rs  mod.rs  result.rs  results.rs  server.rs  spotlight.rs  tags.rs  trigger.rs  types.rs  view.rs
app/src/constants/: colors.rs  facets.rs  icons.rs  info.rs  mod.rs  site.rs  stacks.rs  tech.rs
app/src/constants/colors/: brands.rs  mod.rs  palette.rs  utilities.rs
app/src/constants/icons/: components.rs  core.rs  icon.rs  mod.rs  registry.rs  source.rs  utilities.rs  variant.rs
app/src/constants/icons copy/: components.rs  config.rs  icon.rs  mod.rs  registry.rs  source.rs  utilities.rs  variant.rs
app/src/constants/icons/registry/: core.rs  data.rs  devops.rs  languages.rs  mod.rs  social.rs  tools.rs  ui.rs  web.rs
app/src/constants/icons/registry/review/: data.rs  editors.rs  languages.rs  registry.rs  registry_backup.rs  terminal.rs  web.rs
app/src/database/: media.rs  mod.rs  posts.rs  projects.rs
app/src/layout/: basic.rs  containers.rs  footer.rs  mod.rs  navigation.rs
app/src/pages/: mod.rs  test.rs
app/src/pages/admin/: view.rs
app/src/pages/art/: card.rs  detail.rs  filter.rs  header.rs  mod.rs  mosaic.rs  related.rs  view.rs
app/src/pages/dev/: card.rs  detail.rs  filter.rs  grid.rs  header.rs  mod.rs  view.rs
app/src/pages/home/: about.rs  contact.rs  dev.rs  disciplines.rs  experience.rs  footer.rs  hero.rs  mod.rs  personal.rs  projects.rs  tech.rs  view.rs
app/src/pages/log/: archive.rs  featured.rs  filter.rs  hero.rs  mod.rs  post.rs  utils.rs  view.rs
app/src/pages/projects/: about.rs  contact.rs  dev.rs  experience.rs  hero.rs  mod.rs  projects.rs
app/src/pages/temp/: blog.rs  hero.rs  mod.rs  tryout.rs
app/src/style/components/search/: _spotlight.scss
app/src/style/pages/dev/: _card.scss  _detail.scss
app/src/theme/: config.rs  context.rs  mod.rs  scripts.rs  utilities.rs
app/src/theme/components/: mod.rs  provider.rs  switcher.rs
app/src/views/: about.rs  contact.rs  experience.rs  footer.rs  header.rs  hero.rs  mod.rs  projects.rs  test.rs
backend/: Cargo.toml
backend/src/: db.rs  main.rs
core/: Cargo.toml
core/sql/media/: get_by_id.sql  list.sql  list_related.sql  list_tags.sql
core/sql/posts/: get_by_slug.sql  list.sql  search.sql
core/sql/projects/: get_by_id.sql  get_featured.sql
core/src/: lib.rs  prelude.rs
core/src/base/: index.rs
core/src/components/: dividers.rs  mod.rs
core/src/components/dividers/: config.rs  view.rs
core/src/components/footer/: info.rs  mod.rs  nav.rs  view.rs
core/src/components/header/: controls.rs  logo.rs  nav.rs  view.rs
core/src/constants/: info.rs  mod.rs
core/src/constants/icons/: mod.rs  utilities.rs  variant.rs
core/src/constants/icons/registry/: data.rs  devops.rs  languages.rs  mod.rs  social.rs  tools.rs  ui.rs  web.rs
core/src/database/: media.rs  mod.rs  posts.rs  projects.rs
core/src/pages/: mod.rs
core/src/pages/admin/: mod.rs
core/src/pages/art/: card.rs  filter.rs  mod.rs  related.rs  view.rs
core/src/pages/home/: about.rs  disciplines.rs  experience.rs  hero.rs  mod.rs  tech.rs  view.rs  vision.rs
core/src/pages/log/: archive.rs  header.rs  hero.rs  mod.rs  post.rs  view.rs
core/src/theme/: config.rs  mod.rs  utilities.rs
core/src/theme/components/: provider.rs  switcher.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
migrations/: 0003_posts.sql  (+1 more)
server/: Cargo.toml
server/src/: main.rs
(+173 files in other folders)
