[workspace]
resolver = "2"
members = ["app", "frontend", "server"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'


[workspace.package]
rust-version = "1.95.0"
description = "Building systems, capturing moments, expressing ideas—a portfolio at the intersection of engineering and art"
edition = "2024"
version = "0.1.0"
authors = ["Craig 'Craole' Cole <craig.craole.cole@gmail.com>"]
license = "MIT"
homepage = "https://craole.cc"
repository = "https://github.com/craole-cc/craole-cc"

[workspace.dependencies]
axum = "0.8.4"
cargo-run-bin = { version = "1.7.4", default-features = false }
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
http = "1.3.1"
icondata = "0.7.0"
leptos = { version = "0.8.2", features = ["nightly"] }
leptos_axum = { version = "0.8.2" }
leptos_icons = { version = "0.7.1" }
leptos_meta = { version = "0.8.2" }
leptos_router = { version = "0.8.2", features = ["nightly"] }
log = "0.4.27"
paste-complete = "1.0.15"
simple_logger = "5.2.0"
singlestage = { version = "0.4", features = ["nightly"] }
thiserror = "2.0.18"
tokio = { version = "1.45.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.4", features = ["full"] }
wasm-bindgen = "0.2.106"

[[workspace.metadata.leptos]]
name = "craole-cc"
bin-package = "server"
lib-package = "frontend"
site-root = "target/site"

style-file = "style/main.scss"
tailwind-input-file = "style/tailwind.css"
# tailwind-config-file = "style/tailwind.config.js"

assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "pnpx playwright test"
end2end-dir = "end2end"
