[workspace]
resolver = "2"
members = ["core", "frontend", "backend"]


[workspace.package]
edition = "2024"
rust-version = "1.85.0"
version = "0.1.0"
authors = ["Craig 'Craole' Cole <info@craole.cc>"]
license = "MIT"
description = "Craole.CC portfolio at the intersection of engineering and art"
keywords = ["portfolio", "leptos", "fullstack", "webassembly"]
categories = ["web-programming"]
homepage = "https://craole.cc"
repository = "https://github.com/craole-cc/craole-cc"
readme = "README.md"

#╔═══════════════════════════════════════════════════════════╗
#║ Dependencies                                              ║
#╚═══════════════════════════════════════════════════════════╝
[workspace.dependencies]

# -- Internal Crates ----------------------------------------------------------
core = { path = "core", default-features = false }
frontend = { path = "frontend" }
backend = { path = "backend" }

# -- Core Async & Runtime -----------------------------------------------------
futures = "0.3.32"
tokio = { version = "1.45.0", features = ["full"] }

# -- Web Framework (Axum + Tower) ---------------------------------------------
axum = "0.8.4"
http = "1.3.1"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.4", features = ["full"] }

# -- Leptos UI Framework ------------------------------------------------------
leptos = { version = "0.8.2", features = ["nightly"] }
leptos_axum = { version = "0.8.2" }
leptos_icons = { version = "0.7.1" }
leptos_meta = { version = "0.8.2" }
leptos_router = { version = "0.8.2", features = ["nightly"] }
icondata = "0.7.0"

# -- WebAssembly (WASM) -------------------------------------------------------
# NOTE: Locked to the highest version available in nixpkgs
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "0.4"
web-sys = { version = "=0.3.85", features = [
  "CanvasRenderingContext2d",
  "CssStyleDeclaration",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "ImageData",
  "MediaQueryList",
  "Performance",
  "Window",
] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"

# -- Database -----------------------------------------------------------------
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }

# -- Serialization ------------------------------------------------------------
serde = { version = "1", features = ["derive"] }

# -- Markdown Processing ------------------------------------------------------
pulldown-cmark = "0.12"
ammonia = "4"

# -- Logging ------------------------------------------------------------------
log = "0.4.27"
simple_logger = "5.2.0"

# -- Error Handling -----------------------------------------------------------
anyhow = "1"
thiserror = "2.0.18"

# -- Configuration & Environment ----------------------------------------------
cfg-if = "1.0.0"
dotenvy = "0.15"

# -- Build & Dev Tools --------------------------------------------------------
cargo-run-bin = { version = "1.7.4", default-features = false }
paste-complete = "1.0.15"

#╔═══════════════════════════════════════════════════════════╗
#║ Leptos Metadata                                           ║
#╚═══════════════════════════════════════════════════════════╝
[[workspace.metadata.leptos]]
name = "craole-cc"
bin-package = "backend"
lib-package = "frontend"
site-root = "target/site"

style-file = "style/main.scss"
tailwind-input-file = "style/tailwind.css"

assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001

# End-to-end testing
# [Windows non-WSL]: use "[npx|pnpx].cmd playwright test"
end2end-cmd = "pnpm test"
end2end-dir = "end2end"


#╔═══════════════════════════════════════════════════════════╗
#║ Lints                                                     ║
#╚═══════════════════════════════════════════════════════════╝
[workspace.lints.rust]
unsafe_code = { level = "deny", priority = 0 }
unused = { level = "allow", priority = -1 }

[workspace.lints.clippy]
cargo = { level = "warn", priority = 0 }
complexity = { level = "warn", priority = 0 }
correctness = { level = "deny", priority = 0 }
nursery = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
perf = { level = "warn", priority = 0 }
style = { level = "warn", priority = 0 }
suspicious = { level = "warn", priority = 0 }
cognitive_complexity = { level = "allow", priority = 1 }
# multiple_crate_versions = { level = "allow", priority = 1 }

#╔═══════════════════════════════════════════════════════════╗
#║ Build Profiles                                            ║
#╚═══════════════════════════════════════════════════════════╝
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
